--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,13 @@ click==8.1.7
 dominate==2.9.1
 Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
-gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 numpy==2.1.0
-packaging==24.1
 pandas==2.2.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
 tzdata==2024.1
